--- a/Ororatech_1.ipynb
+++ b/Ororatech_1.ipynb
@@ -64,7 +64,7 @@
    "source": [
     "\n",
     "'''\n",
-    "Loading MWIR data from F002_L1__IR__L2L1M0__2025-01-10T215412.018348Z_2025-04-10T154832.806087Z_97706189_MWIR.tif\n",
+    "Your data.tif\n",
     "\n",
     "F002 - Mission \n",
     "L1 - Level 1 processing\n",
@@ -81,7 +81,7 @@
     "# Open a GeoTIFF file with rioxarray\n",
     "\n",
     "\n",
-    "da = rxr.open_rasterio(\"Dataset_1/F002_L1__IR__L2L1M0__2025-01-10T215412.018348Z_2025-04-10T154832.806087Z_97706189_MWIR.tif\").squeeze() # Remove the band dimension if it's single-band\n",
+    "da = rxr.open_rasterio(\"Dataset_1/your_data.tif\").squeeze() # Remove the band dimension if it's single-band\n",
     "print(\"Original coordinate reference system:\", da.rio.crs) # Coordinate Reference System\n",
     "print(\"Original resolution:\", da.rio.resolution()) # (pixel width, pixel height)\n",
     "print(\"Original bounds:\", da.rio.bounds()) # (left, bottom, right, top) in the CRS units\n",
@@ -120,7 +120,7 @@
    ],
    "source": [
     "# Another way to load data\n",
-    "path = \"Dataset_1/F002_L1__IR__L2L1M0__2025-01-10T215412.018348Z_2025-04-10T154832.806087Z_97706189_MWIR.tif\"\n",
+    "path = \"Dataset_1/your_data.tif\"\n",
     "\n",
     "with rasterio.open(path) as ds:\n",
     "    print(\"CRS:\", ds.crs)\n",
