--- a/Ororatech_1.ipynb
+++ b/Ororatech_1.ipynb
@@ -387,7 +387,7 @@
     "# Contains candidate detection points (e.g., hotspots). \n",
     "# Each detection has geographic coordinates in the file’s CRS.\n",
     "gdf = gpd.read_file(\n",
-    "    \"Dataset_1/F002_L1__IR__L2L1M0__2025-01-10T215412.018348Z_2025-04-10T154832.806087Z_97706189_model_detections.geojson\"\n",
+    "    \"Dataset_1/Your_data.geojson\"\n",
     ")\n",
     "\n",
     "# Reproject detections to the raster’s CRS so both are aligned\n",
