Jupyter notebooks for the two datasets

--- a/Dataset_1.ipynb
+++ b/Dataset_1.ipynb
@@ -2,29 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-09-16 15:12:33\n"
+     ]
+    }
+   ],
    "source": [
     "## Import necessary libraries\n",
-    "# rioxarray extends xarray to understand geospatial rasters (GeoTIFF, NetCDF…)\n",
+    "# --- Core numerical & data handling ---\n",
     "import numpy as np\n",
-    "import rasterio\n",
-    "from rasterio.transform import from_origin\n",
-    "import rioxarray as rxr\n",
-    "# from rasterio.enums import Resampling\n",
-    "import rasterio\n",
-    "# import rasterio.plot\n",
-    "import netCDF4 as nc\n",
-    "import numpy as np\n",
-    "import geojson as gj\n",
     "import pandas as pd\n",
     "import geopandas as gpd\n",
+    "import netCDF4 as nc\n",
+    "\n",
+    "# --- Raster & geospatial ---\n",
+    "import rasterio # rioxarray extends xarray to understand geospatial rasters (GeoTIFF, NetCDF…)\n",
+    "from rasterio.transform import from_origin\n",
+    "import rioxarray as rxr\n",
+    "import geojson as gj\n",
     "from affine import Affine\n",
+    "\n",
+    "# --- Plotting & visualization ---\n",
     "import matplotlib.pyplot as plt\n",
+    "import matplotlib.ticker as mticker\n",
+    "from matplotlib.ticker import FormatStrFormatter\n",
+    "from matplotlib.patches import Rectangle, Circle\n",
+    "from mpl_toolkits.axes_grid1.inset_locator import inset_axes\n",
+    "\n",
+    "# --- Cartopy (mapping) ---\n",
     "import cartopy.crs as ccrs\n",
     "import cartopy.feature as cfeature\n",
-    "from matplotlib.ticker import FormatStrFormatter\n",
+    "from cartopy.mpl.gridliner import LONGITUDE_FORMATTER, LATITUDE_FORMATTER\n",
+    "\n",
+    "# --- Utilities ---\n",
     "import datetime\n",
     "print(datetime.datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\"))"
    ]
@@ -153,8 +169,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
     "\n",
     "# Percentile stretch for background detail\n",
     "lo, hi = np.nanpercentile(arr, 1), np.nanpercentile(arr, 90)\n",
@@ -201,9 +215,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib.patches import Circle\n",
     "\n",
     "# Existing subset + stretch\n",
     "sub_arr = arr[1400:1480, 950:1000]\n",
@@ -534,14 +545,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib.patches import Rectangle\n",
-    "from mpl_toolkits.axes_grid1.inset_locator import inset_axes\n",
-    "import cartopy.crs as ccrs\n",
-    "import cartopy.feature as cfeature\n",
-    "import matplotlib.ticker as mticker\n",
-    "from cartopy.mpl.gridliner import LONGITUDE_FORMATTER, LATITUDE_FORMATTER\n",
     "\n",
     "# --- Data ---\n",
     "lons = gdf_sub.geometry.x.values\n",
@@ -667,17 +670,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Back up plotting "
+    "## Additional backup stuff"
    ]
   },
   {
@@ -686,19 +682,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
-    "from datetime import datetime\n",
+    "# import re\n",
+    "# from datetime import datetime\n",
     "\n",
-    "path = \"Dataset_1/Your_data.tif\"\n",
+    "# path = \"Dataset_1/Your_data.tif\"\n",
     "\n",
-    "pattern = r\"(\\d{4}-\\d{2}-\\d{2}T\\d{6}\\.\\d+Z)\"\n",
-    "times = re.findall(pattern, path)\n",
+    "# pattern = r\"(\\d{4}-\\d{2}-\\d{2}T\\d{6}\\.\\d+Z)\"\n",
+    "# times = re.findall(pattern, path)\n",
     "\n",
-    "start_time = datetime.strptime(times[0], \"%Y-%m-%dT%H%M%S.%fZ\")\n",
-    "end_time   = datetime.strptime(times[1], \"%Y-%m-%dT%H%M%S.%fZ\")\n",
+    "# start_time = datetime.strptime(times[0], \"%Y-%m-%dT%H%M%S.%fZ\")\n",
+    "# end_time   = datetime.strptime(times[1], \"%Y-%m-%dT%H%M%S.%fZ\")\n",
     "\n",
-    "print(\"Start:\", start_time)\n",
-    "print(\"End:\", end_time)\n"
+    "# print(\"Start:\", start_time)\n",
+    "# print(\"End:\", end_time)\n"
    ]
   },
   {
