--- a/Dataset_2.ipynb
+++ b/Dataset_2.ipynb
@@ -2,30 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-09-16 15:11:36\n"
+     ]
+    }
+   ],
    "source": [
     "## Import necessary libraries\n",
-    "# rioxarray extends xarray to understand geospatial rasters (GeoTIFF, NetCDF…)\n",
+    "# --- Core numerical & data handling ---\n",
     "import numpy as np\n",
-    "import rasterio\n",
-    "from rasterio.transform import from_origin\n",
-    "import rioxarray as rxr\n",
-    "# from rasterio.enums import Resampling\n",
-    "import rasterio\n",
-    "# import rasterio.plot\n",
-    "import netCDF4 as nc\n",
-    "import numpy as np\n",
-    "import geojson as gj\n",
     "import pandas as pd\n",
     "import geopandas as gpd\n",
+    "import netCDF4 as nc\n",
+    "\n",
+    "# --- Raster & geospatial ---\n",
+    "import rasterio # rioxarray extends xarray to understand geospatial rasters (GeoTIFF, NetCDF…)\n",
+    "from rasterio.transform import from_origin\n",
+    "import rioxarray as rxr\n",
+    "import geojson as gj\n",
     "from affine import Affine\n",
+    "\n",
+    "# --- Plotting & visualization ---\n",
     "import matplotlib.pyplot as plt\n",
-    "# from shapely.geometry import Point\n",
+    "import matplotlib.ticker as mticker\n",
     "from matplotlib.ticker import FormatStrFormatter\n",
+    "from matplotlib.patches import Rectangle, Circle\n",
+    "from mpl_toolkits.axes_grid1.inset_locator import inset_axes\n",
+    "\n",
+    "# --- Cartopy (mapping) ---\n",
+    "import cartopy.crs as ccrs\n",
+    "import cartopy.feature as cfeature\n",
+    "from cartopy.mpl.gridliner import LONGITUDE_FORMATTER, LATITUDE_FORMATTER\n",
+    "\n",
+    "# --- Utilities ---\n",
     "import datetime\n",
-    "print(datetime.datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\"))\n"
+    "\n",
+    "print(datetime.datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\"))"
    ]
   },
   {
@@ -152,8 +170,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "# Percentile stretch for background detail\n",
     "lo, hi = np.nanpercentile(arr, 1), np.nanpercentile(arr, 90)\n",
     "\n",
@@ -205,10 +221,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import geopandas as gpd\n",
-    "import numpy as np\n",
-    "from affine import Affine\n",
-    "\n",
     "# --- Load detections ---\n",
     "# Read in GeoJSON file containing detection points (e.g., potential hotspots).\n",
     "gdf = gpd.read_file(\n",
@@ -287,10 +299,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import cartopy.crs as ccrs\n",
-    "import cartopy.feature as cfeature\n",
-    "\n",
     "# --------------------------------------------------------\n",
     "# Extract lon, lat, and MWIR values from GeoDataFrame\n",
     "# --------------------------------------------------------\n",
@@ -528,7 +536,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Additional  "
+    "## Additional backup stuff"
    ]
   },
   {
@@ -537,19 +545,171 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
-    "from datetime import datetime\n",
+    "# import re\n",
+    "# from datetime import datetime\n",
     "\n",
-    "path = \"Dataset_2/Your_data.tif\"\n",
+    "# path = \"Dataset_1/Your_data.tif\"\n",
     "\n",
-    "pattern = r\"(\\d{4}-\\d{2}-\\d{2}T\\d{6}\\.\\d+Z)\"\n",
-    "times = re.findall(pattern, path)\n",
+    "# pattern = r\"(\\d{4}-\\d{2}-\\d{2}T\\d{6}\\.\\d+Z)\"\n",
+    "# times = re.findall(pattern, path)\n",
     "\n",
-    "start_time = datetime.strptime(times[0], \"%Y-%m-%dT%H%M%S.%fZ\")\n",
-    "end_time   = datetime.strptime(times[1], \"%Y-%m-%dT%H%M%S.%fZ\")\n",
+    "# start_time = datetime.strptime(times[0], \"%Y-%m-%dT%H%M%S.%fZ\")\n",
+    "# end_time   = datetime.strptime(times[1], \"%Y-%m-%dT%H%M%S.%fZ\")\n",
     "\n",
-    "print(\"Start:\", start_time)\n",
-    "print(\"End:\", end_time)\n"
+    "# print(\"Start:\", start_time)\n",
+    "# print(\"End:\", end_time)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import matplotlib.pyplot as plt\n",
+    "# import cartopy.crs as ccrs\n",
+    "# import cartopy.feature as cfeature\n",
+    "\n",
+    "# # Extract lon, lat, and mwir values from filtered gdf_sub\n",
+    "# lons = gdf.geometry.x.values\n",
+    "# lats = gdf.geometry.y.values\n",
+    "# mwir_vals = gdf[\"mwir_val\"].values\n",
+    "\n",
+    "# # Plot map using Cartopy\n",
+    "# fig, ax = plt.subplots(figsize=(9, 9), subplot_kw={'projection': ccrs.PlateCarree()})\n",
+    "\n",
+    "# # Add coastlines, borders, states\n",
+    "# ax.coastlines(resolution=\"10m\")\n",
+    "# ax.add_feature(cfeature.BORDERS, linestyle=':')\n",
+    "# ax.add_feature(cfeature.STATES, linestyle=':', edgecolor=\"gray\")\n",
+    "\n",
+    "# # Compute bounds with a small padding\n",
+    "# lon_min, lon_max = lons.min() - 0.5, lons.max() + 0.5\n",
+    "# lat_min, lat_max = lats.min() - 0.5, lats.max() + 0.5\n",
+    "\n",
+    "\n",
+    "# # Normalize MWIR values to [0.3, 1.0] for alpha (avoid fully invisible points)\n",
+    "# norm = (mwir_vals - mwir_vals.min()) / (mwir_vals.max() - mwir_vals.min())\n",
+    "# alphas = 0.3 + 0.7 * norm   # min alpha=0.3, max alpha=1.0\n",
+    "\n",
+    "# sc = ax.scatter(\n",
+    "#     lons, lats, \n",
+    "#     c=mwir_vals, \n",
+    "#     cmap=\"plasma\",    # Color by MWIR intensity\n",
+    "#     s=100, \n",
+    "#     alpha=alphas,           # <--- per-point transparency\n",
+    "#     transform=ccrs.PlateCarree()\n",
+    "# )\n",
+    "# # Add colorbar for MWIR intensity\n",
+    "# cbar = plt.colorbar(sc, ax=ax, orientation=\"vertical\", shrink=0.7, pad=0.05)\n",
+    "# cbar.set_label(\"MWIR Intensity\", fontsize=12)\n",
+    "\n",
+    "# # Set extent to Southern California region\n",
+    "# ax.set_extent([-121, -117.5, 31.8, 35.2], crs=ccrs.PlateCarree())\n",
+    "# # Apply zoomed extent\n",
+    "# # ax.set_extent([lon_min, lon_max, lat_min, lat_max], crs=ccrs.PlateCarree())\n",
+    "\n",
+    "# ax.set_title(\"MWIR Detections on Map (Southern California & Offshore)\", fontsize=14)\n",
+    "\n",
+    "# plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Define the subarray window\n",
+    "# row_min, row_max = 1400, 1480\n",
+    "# col_min, col_max = 950, 1000\n",
+    "\n",
+    "\n",
+    "\n",
+    "# import matplotlib.pyplot as plt\n",
+    "# from shapely.geometry import Point\n",
+    "\n",
+    "# # Coordinates provided by user (lat, lon)\n",
+    "\n",
+    "\n",
+    "# # Extract lat/lon separately \n",
+    "# lons = gdf_sub.geometry.x.values\n",
+    "# lats = gdf_sub.geometry.y.values\n",
+    "\n",
+    "# # Plot map using Cartopy\n",
+    "# import cartopy.crs as ccrs\n",
+    "# import cartopy.feature as cfeature\n",
+    "\n",
+    "# fig, ax = plt.subplots(figsize=(9,9), subplot_kw={'projection': ccrs.PlateCarree()})\n",
+    "\n",
+    "# # Add coastlines and borders\n",
+    "# ax.coastlines(resolution=\"10m\")\n",
+    "# ax.add_feature(cfeature.BORDERS, linestyle=':')\n",
+    "# ax.add_feature(cfeature.STATES, linestyle=':', edgecolor=\"gray\")\n",
+    "\n",
+    "# # Scatter points\n",
+    "# ax.scatter(lons, lats, color=\"red\", s=60, transform=ccrs.PlateCarree(), label=\"Given Coordinates\")\n",
+    "\n",
+    "# # Set extent to Southern California region\n",
+    "# ax.set_extent([-121, -117.5, 31.8, 35.2], crs=ccrs.PlateCarree())\n",
+    "\n",
+    "# ax.set_title(\"Map of Provided Coordinates (Southern California & Offshore)\", fontsize=14) # as given in json file\n",
+    "# ax.legend()\n",
+    "# plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import matplotlib.pyplot as plt\n",
+    "# import cartopy.crs as ccrs\n",
+    "# import cartopy.feature as cfeature\n",
+    "\n",
+    "# # Extract lon, lat, and mwir values from filtered gdf_sub\n",
+    "# lons = gdf_sub.geometry.x.values\n",
+    "# lats = gdf_sub.geometry.y.values\n",
+    "# mwir_vals = gdf_sub[\"mwir_val\"].values\n",
+    "\n",
+    "# # Plot map using Cartopy\n",
+    "# fig, ax = plt.subplots(figsize=(9, 9), subplot_kw={'projection': ccrs.PlateCarree()})\n",
+    "\n",
+    "# # Add coastlines, borders, states\n",
+    "# ax.coastlines(resolution=\"10m\")\n",
+    "# ax.add_feature(cfeature.BORDERS, linestyle=':')\n",
+    "# ax.add_feature(cfeature.STATES, linestyle=':', edgecolor=\"gray\")\n",
+    "\n",
+    "# # Compute bounds with a small padding\n",
+    "# lon_min, lon_max = lons.min() - 0.5, lons.max() + 0.5\n",
+    "# lat_min, lat_max = lats.min() - 0.5, lats.max() + 0.5\n",
+    "\n",
+    "\n",
+    "# # Normalize MWIR values to [0.3, 1.0] for alpha (avoid fully invisible points)\n",
+    "# norm = (mwir_vals - mwir_vals.min()) / (mwir_vals.max() - mwir_vals.min())\n",
+    "# alphas = 0.3 + 0.7 * norm   # min alpha=0.3, max alpha=1.0\n",
+    "\n",
+    "# sc = ax.scatter(\n",
+    "#     lons, lats, \n",
+    "#     c=mwir_vals, \n",
+    "#     cmap=\"cividis_r\", \n",
+    "#     s=100, \n",
+    "#     alpha=alphas,           # <--- per-point transparency\n",
+    "#     transform=ccrs.PlateCarree()\n",
+    "# )\n",
+    "# # Add colorbar for MWIR intensity\n",
+    "# cbar = plt.colorbar(sc, ax=ax, orientation=\"vertical\", shrink=0.7, pad=0.05)\n",
+    "# cbar.set_label(\"MWIR Intensity\", fontsize=12)\n",
+    "\n",
+    "# # Set extent to Southern California region\n",
+    "# ax.set_extent([-121, -117.5, 31.8, 35.2], crs=ccrs.PlateCarree())\n",
+    "# # Apply zoomed extent\n",
+    "# # ax.set_extent([lon_min, lon_max, lat_min, lat_max], crs=ccrs.PlateCarree())\n",
+    "\n",
+    "# ax.set_title(\"MWIR Detections on Map (Southern California & Offshore)\", fontsize=14)\n",
+    "\n",
+    "# plt.show()\n"
    ]
   },
   {
